--- a/pipeline_webpage/css/stylesheet.css
+++ b/pipeline_webpage/css/stylesheet.css
@@ -252,31 +252,29 @@ body {
 
 .intro-title {
     flex: 1;
-    font-size: 2.9em;
     background-image: linear-gradient(to right, #0021A5, #E28F41);
     background-clip: text;
     -webkit-background-clip: text;
     -moz-background-clip: text;
     -webkit-text-fill-color: transparent; 
     -moz-text-fill-color: transparent;
-    width: 41%;
+    width: 50%;
     margin: auto;
-    /* border: solid 1px red; */
+    font-size: 2.8vw;
 }
 
 .intro-title h1 {
     margin-top: 0;
-    margin-bottom: 0;
-    margin-right: 0;
-    margin-left: 0;
+    margin-bottom: 5%;
+    text-align: center;
 }
 
 .intro-text {
     flex: 1;
     width: 50%;
     margin: auto;
-    padding-left: 6em;
-    padding-right: 6em;
+    padding-left: 2em;
+    padding-right: 3em;
     border: solid 3px #bdbdbd;
     border-radius: 25px;
 }
@@ -299,6 +297,11 @@ body {
     margin: auto;
     margin-top: 5%;
     margin-bottom: 10%;
+    width: 50%;
+}
+
+.sign-in-button button {
+    width: 100%;
 }
 
 .log-in-container {
@@ -338,6 +341,11 @@ body {
     margin: auto;
     margin-top: 5%;
     margin-bottom: 10%;
+    width: 65%;
+}
+
+.request-access-button button {
+    width: 100%;
 }
 
 .request-access-container {
